style(checkbox, radio, switch): more improvements and integration fixes
- checkbox was misaligned in a list
- checkboxes in a row wasn't margined properly
- radio buttons in a row wasn't margined properly
- switch was misaligned with its text

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -122,6 +122,7 @@ md-list-item, md-list-item .md-list-item-inner {
     width: 3 * $baseline-grid;
     margin-left: 3px;
     margin-right: 29px;
+    margin-top: 16px;
   }
   & .md-avatar, .md-avatar-icon {
     margin-top: $baseline-grid;
